syntax = "proto3";

option csharp_namespace = "DiscordClone.AuthService.Domain";

package authproto;

service AuthenticationProtoService {
    rpc GenerateToken(TokenRequest) returns (TokenResponse) {}
    rpc ValidateToken(TokenValidationRequest) returns (TokenValidationResponse) {}
    rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse) {}
    rpc BanUser(BanUserRequest) returns (BanUserResponse) {}
    rpc UnbanUser(UnbanUserRequest) returns (UnbanUserResponse) {}
}

message TokenRequest {
    string username = 1;
    string password = 2;
}

message TokenResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
}

message TokenValidationRequest {
    string token = 1;
}

message TokenValidationResponse {
    bool is_valid = 1;
    string username = 2;
    int64 expires_in = 3;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    int64 expires_in = 3;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ForgotPasswordResponse {
    bool success = 1;
    string message = 2;
}

message BanUserRequest {
    string user_uuid = 1;
    string admin_uuid = 2;
    string ban_reason = 3;
}

message BanUserResponse {
    bool success = 1;
    string message = 2;
}

message UnbanUserRequest {
    string user_uuid = 1;
}

message UnbanUserResponse {
    bool success = 1;
    string message = 2;
}
